# cookiecutter-pypackage

./: 404.html  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml  tox.ini
.github/workflows/: dev.yml  publish.yml
console_script_setup/: index.html
docs/: faq.md  pypi_release_checklist.md  tutorial.md
faq/: index.html
history/: index.html
pypi_release_checklist/: index.html
search/: search_index.json
tutorial/: index.html
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  mkdocs.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.github/workflows/: dev.yml  preview.yml  release.yml
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: __init__.py  cli.py
