[tool]
[tool.poetry]
name = "cookiecutter-pypackage"
version = "1.1.1"
description = "Cookiecutter template for a Python package"
license = "BSD-3-Clause"
authors = ["Xie Wei <ampedee@gmail.com>"]
readme = "README.md"
repository = "https://github.com/enningb/cookiecutter-pypackage"
documentation = "https://enningb.github.io/cookiecutter-pypackage/"
keywords = ['cookiecutter', 'template', 'package']

include = [
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
black  = { version = "^23.12.1", optional = true}
isort  = { version = "^5.13.2", optional = true}
flake8  = { version = "^6.1.0", optional = true}
flake8-docstrings = { version = "^1.7.0", optional = true }
mypy = {version = "^1.8.0", optional = true}
pytest  = { version = "^7.4.3", optional = true}
pytest-cov  = { version = "^4.1.0", optional = true}
tox  = { version = "^4.11.4", optional = true}
virtualenv  = { version = "^20.25.0", optional = true}
pip  = { version = "^23.3.2", optional = true}
mkdocs  = { version = "^1.5.3", optional = true}
mkdocs-include-markdown-plugin  = { version = "^6.0.4", optional = true}
mkdocs-material  = { version = "^9.5.2", optional = true}
mkdocstrings  = { version = "^0.24.0", optional = true}
mkdocstrings-python  = { version = "^1.7.5", optional = true}
mkdocs-material-extensions  = { version = "^1.3.1", optional = true}
twine  = { version = "^4.0.2", optional = true}
mkdocs-autorefs = {version = "^0.5.0", optional = true}
pre-commit = {version = "^3.6.0", optional = true}
toml = {version = "^0.10.2", optional = true}
bump2version = {version = "^1.0.1", optional = true}


[tool.poetry.extras]
dev = [
  "pytest",
  "pytest-cookies",
  "pyyaml",
  "mkdocs",
  "mkdocs-material",
  "mkdocs-material-extensions",
  "pytest-cov",
  "tox",
  "mkdocs-include-markdown-plugin",
  "click",
  "typer",
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
